--- a/label_studio_ml/examples/grounding_dino/requirements.txt
+++ b/label_studio_ml/examples/grounding_dino/requirements.txt
@@ -1,4 +1,4 @@
 gunicorn==23.0.0
-label-studio-ml @ git+https://github.com/HumanSignal/label-studio-ml-backend.git@master
-olefile==0.47
+label-studio-ml @ git+https://github.com/khengkok/label-studio-ml-backend.git@master
+olefile
 accelerate==1.6.0
